--- a/CSS/eslam.css
+++ b/CSS/eslam.css
@@ -448,7 +448,7 @@ ul {
 }
 .features .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     gap: 40px;
 }
 .features .box {
@@ -1422,13 +1422,38 @@ border-color: var(--main-color);
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 30px;
 }
+.scrollup {
+    background-color: var(--main-color);
+    color: #fff;
+    position: fixed;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    right: 2rem;
+    bottom: -50%;
+    z-index: 100;
+    transition: 0.4s  all ease;
+    cursor: pointer;
+}
+.scrollup i {
+    font-size: 1rem;
+}
+.scrollup:hover {
+    transform: translateY(-.25rem);
+}
+.show-scroll {
+    bottom: 7rem;
+}
 @media (min-width: 1200px) {
     .footer .container {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
         gap: 30px;
     }
-  }
+}
 .footer .container .box h3 {
     font-size: 50px;
     margin: 0 0 20px;
